# ProjectPurgatory

./: .clang-format  CMakeLists.txt  README.md
src/: camera.cpp  camera.hpp  main.cpp  runner.cpp  runner.hpp  scene.cpp  scene.hpp  title.cpp  title.hpp  utils.tpp
